welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:2: error: not found: value getHauteurMonde
var d:Int=getHauteurMonde()
          ^